# argus

./: .vimrc  CMakeLists.txt  README.md
cmake/: FindFlyCapture2.cmake  FindOpenCV.cmake
hardware/jetson_tx2/: README.txt  attribution_card.html
hardware/jetson_tx2/files/: Case_Bottom.DXF  Case_Side.DXF
hardware/nvidia_tx2/: LICENSE.txt
hardware/nvidia_tx2/files/: Case_Front.DXF  Case_Rear.DXF  Case_Top.DXF
hardware/ptgrey_gs3/: GS3-U3-2X-ReleaseNotes.htm
hardware/ptgrey_gs3/drawings/: GSR-002-R1.IGS  GSR-002-R1.STEP  GSR-002-R1.x_b  Grasshopper Tripod Adapter.IGS
src/: main.cpp
